# financial-tracker

./: .gitignore  BUILD_AND_DISTRIBUTE.md  README.md  SETUP.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/auth/: AuthPage.tsx
src/components/goals/: AddGoalModal.tsx
src/components/layout/: Sidebar.tsx  TopBar.tsx
src/components/reports/: CategoryBreakdown.tsx
src/components/transactions/: AddTransactionModal.tsx  EditTransactionModal.tsx
src/components/ui/: CustomDatePicker.tsx  CustomSelect.tsx  CustomTimePicker.tsx
src/pages/: DashboardPage.tsx  GoalsPage.tsx  ReportsPage.tsx  SettingsPage.tsx  TransactionsPage.tsx
src/services/: database.ts  logger.ts  notifications.ts
src/store/: authStore.ts  goalStore.ts  transactionStore.ts
src/types/: index.ts
src/utils/: calculations.ts  formatters.ts
