[package]
name = "financial-tracker"
version = "0.1.0"
description = "Cross-platform Financial Tracker Desktop App"
authors = ["You"]
edition = "2021"

[lib]
name = "financial_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri            = { version = "2",   features = [] }
tauri-plugin-sql = { version = "2",   features = ["sqlite"] }
tauri-plugin-log = { version = "2" }
tauri-plugin-notification = { version = "2" }
serde            = { version = "1",   features = ["derive"] }
serde_json       = "1"
log              = "0.4"

[profile.dev]
incremental = true

[profile.release]
panic        = "abort"
codegen-units = 1
lto          = true
opt-level    = "s"
strip        = true
